--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+	margin: 0;
+	padding: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,36 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.modal {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+}
+
+.modal .background-modal {
+	background: rgba(0,0,0,.25);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: 0;
+}
+
+.modal .modal-content {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	max-width: 50vw;
+	background: white;
+	border-radius: 10px;
+	padding: 1.5rem;
+	border: 2px solid black;
+	z-index: 1;
 }
