Implemented url params [Ticket 11]

--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,18 @@ body {
 	border: 2px solid black;
 	z-index: 1;
 }
+
+.filters button {
+	margin-left: .5rem;
+}
+
+.addons {
+	border-radius: 10px;
+	padding: 1.5rem;
+	border: 2px solid black;
+	display: inline-block;
+}
+
+.addons div:first-child {
+	margin-bottom: 1rem;
+}
